updated cs readme
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@811 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/csharp/README
+++ b/csharp/README
@@ -1,6 +1,6 @@
 == Intent ==
 
-a simple implementation in [[Technology:CSharp|C#]] for [[Technology:.NET]] Framework
+a simple implementation in [[Language:CSharp|C#]] for [[Technology:.NET]] Framework
 
 == Languages ==
 
