git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@821 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/csharp/README
+++ b/csharp/README
@@ -1,16 +1,17 @@
 == Intent ==
 
-a simple implementation in [[Language:CSharp|C#]] for [[Technology:.NET]] Framework
+a simple implementation in [[Language:CSharp|C#]] for the [[Technology:.NET]] Framework
 
 == Languages ==
 
-* [[Language:CSharp]](C#): Programming language used for all code (Version 4.0)
+* [[Language:CSharp]] (C#): Programming language used for all code (Version 4.0)
 
 == Technologies ==
 
 * [[Technology:csc.exe]]: C# compiler (Version 4.0)
-* [[Technology:.NET]]: Framework used to execute compiled code (Version 4.0)
-* [[Technology:NUnit]]: Unit testing framework used for testing (Version 2.5.9.10348)
+* [[Technology:.NET]]: framework used to execute compiled code (Version 4.0)
+* [[Technology:NUnit]]: unit testing framework used for testing (Version 2.5)
+* [[Technology:Visual Studio]]: optional IDE (Version 2010)
 
 == Features ==
 
@@ -20,22 +21,39 @@ a simple implementation in [[Language:CSharp|C#]] for [[Technology:.NET]] Framew
 * [[101feature:Depth]]
 * [[101feature:Serialization]]
 
-== Motivation ==
-Basic style of [[OO programming]] is applied. C# type system is used to create in-memory representation of the [[object model]].
-Relevant classes contain methods which implement the [[query]] for totaling salaries, the [[:Category:transformation]] for cutting salaries and a [[query]] to check department's [[:101feature:Depth|depth]]. XML [[serialization]] for public [[Technology:.NET]] classes is enabled by default, [[in-memory XML processing]] is used to create object model from XML file.
-Simple usage of [[builder pattern]] to create in-memory representation of meganalysis company is shown.
+== Motivation == 
+
+Basic style of [[OO programming]] is applied. The C# type system is
+used to create an in-memory representation, in fact, an [[object
+model]] for companies, departments, and employees. There is also an
+extra base class for persons from which employees are derived, thereby
+illustrating [[class inheritance]]. Operations on companies are
+implemented as [[Category:instance method]]s. XML-based
+[[:Category:serialization]] is immediately available for all public
+[[Technology:.NET]] classes. Arguably, the generic [[O/X mapping]]
+used for serialization produces XML that is not platform independent
+so that [[open serialization]] is supported.
 
 == Architecture ==
-C# object-oriented representation of 101companies model is located in the ''CompanyModel folder''. It contains classes with required properties and methods(features implementations).
+
+C# object-oriented representation of 101companies model is located in
+the ''CompanyModel folder''. It contains classes with required
+properties and methods (features implementations).
+
 ''Tests'' folder contains:
 * ''FeaturesTest'' class which covers test cases for the features: [[:101feature:Total|Total]], [[:101feature:Cut|Cut]], [[:101feature:Depth|Depth]].
 * ''SerializationTests'' class which covers test cases for [[serialization]]/de-serialization.
-Also helpers for building in-memory model for meganalysis company and serialization are implemented.
+
+Also helpers for building in-memory model for meganalysis company and
+serialization are implemented.
 
 == Usage ==
-[[Technology:Visual Studio]] 2010 should be used to open a project file.
-The project itself is a class-library and compiles into a DLL. To run a project you must execute at least one unit test (or all at once).
-Nunit GUI or other Visual studio extension (e.g. Resharper) should be used for executing unit tests.
+
+[[Technology:Visual Studio]] 2010 should be used to open a project
+file. The project itself is a class-library and compiles into a
+DLL. To run a project you must execute at least one unit test (or all
+at once). The Nunit GUI could be used for executing the unit tests
+conveniently.
 
 == Contributors ==
 
