git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@831 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/csharp/README
+++ b/csharp/README
@@ -23,7 +23,7 @@ a simple implementation in [[Language:CSharp|C#]] for the [[Technology:.NET]] Fr
 
 == Motivation == 
 
-Basic style of [[OO programming]] is applied. The C# type system is
+Basic style of [[OO programming]] is exercised. The C# type system is
 used to create an in-memory representation, in fact, an [[object
 model]] for companies, departments, and employees. There is also an
 extra base class for persons from which employees are derived, thereby
