git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@849 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xslt/README
+++ b/xslt/README
@@ -23,7 +23,7 @@ Two processors were tested and their usage was scripted in a Makefile.
 * [[101feature:Total]]
 * [[101feature:Cut]]
 * [[101feature:Depth]]
-* [[101feature:Data exchange]]
+* [[101feature:Serialization]]
 
 The data model for companies is provided as an XML schema.
 
