git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@861 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hadoop/README
+++ b/hadoop/README
@@ -4,7 +4,7 @@ a simple implementation in [[Language:Java for Hadoop]]
 
 == Languages ==
 
-* [[Language:Java for Hadoop]]
+* [[Language:Java]]
 
 == Technologies ==
 
