git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@862 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hadoop/README
+++ b/hadoop/README
@@ -1,6 +1,6 @@
 == Intent ==
 
-a simple implementation in [[Language:Java for Hadoop]]
+an implementation with parallelism based on [[Technology:Hadoop]]
 
 == Languages ==
 
@@ -8,6 +8,7 @@ a simple implementation in [[Language:Java for Hadoop]]
 
 == Technologies ==
 
+* [[Technology:Hadoop]]: Apache's MapReduce framework
 * [[Technology:JDK]]: provider of javac et al.
 * [[Technology:JSE]]: execution platform (Version 1.6)
 * [[Technology:JUnit]]: automated testing support (Version 4)
