--- a/hibernate2/README
+++ b/hibernate2/README
@@ -1,6 +1,6 @@
 == Intent == 
 
-Object [[persistence]] and [[O/R mapping]] with [[Technology:Hibernate]]
+[[O/R mapping]] with [[Technology:Hibernate]]
 
 == Implementations ==
 
