Major clean-up for all the ANTLR versions; did some things here and there as well.
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@885 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/aspectJ/README
+++ b/aspectJ/README
@@ -1,6 +1,6 @@
 == Intent ==
 
-advanced modular implementations of some features in [[Language:AspectJ]]
+advanced modularization with [[Language:AspectJ]]
 
 == Languages ==
 
