--- a/hadoop/README
+++ b/hadoop/README
@@ -1,6 +1,6 @@
 == Intent ==
 
-an implementation with parallelism based on [[Technology:Hadoop]]
+parallel company processing with [[Technology:Hadoop]]
 
 == Languages ==
 
