injecting more code into READMEs
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@912 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/aspectJ/README
+++ b/aspectJ/README
@@ -113,7 +113,7 @@ package ''org.softlang.aspectj.tests'' hosts JUnit tests; see below.
 * AJDT must be installed in Eclipse if Eclipse is to be used.
 * Open the project with Eclipse; this will also build the project.
 * There are JUnit tests available as the package ''org.softlang.java.tests''.
-** Run class Tests with JUnit to exercise all features.
+* Run class Tests with JUnit to exercise all features.
 
 == Contributors ==
 
