git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@925 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/prolog/README
+++ b/prolog/README
@@ -1,3 +1,9 @@
+== Intent ==
+
+Logic programming-based implementation
+
+== Motivation ==
+
 We implement some "company" scenarios in Prolog.
 There is a predicate total/2 to total all salaries in a company.
 There is a predicate cut/2 to cut all salaries in half.
