Simplifying hibernate implementation
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@958 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -121,6 +121,7 @@ You may also want to run "make clean" in the root dir to be clean for next time.
 
 * {{101contributor|Thomas Schmorleiz|developer}}
 * {{101contributor|Ralf Lämmel|developer}}
+* {{101contributor|Andrei Varanovich|reviewer}}
 
 == Issues == 
 
